--- a/WD11_EXERCISE11_GARCIA.html
+++ b/WD11_EXERCISE11_GARCIA.html
@@ -15,7 +15,7 @@
   </head>
 
   <!--1. Create a website about your favorite anime, book, series, or etc.
-2. The website must be responsive
+2. The website must be responsive adding some new text into the docu
 3. The website must be created using bootstrap
 4. Maximize the use of fontawesome/bootstrap icons
 5. Maximize the use of flex elements
