--- a/WD11_EXERCISE11_GARCIA.html
+++ b/WD11_EXERCISE11_GARCIA.html
@@ -4,7 +4,404 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Favorite Anime</title>
+    <link rel="icon" type="image/png" href="img/akatsuki-logo.png" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
   </head>
-  <body></body>
+
+  <!--1. Create a website about your favorite anime, book, series, or etc.
+2. The website must be responsive adding some new text into the docu
+3. The website must be created using bootstrap
+4. Maximize the use of fontawesome/bootstrap icons
+5. Maximize the use of flex elements
+-->
+  <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-dark py-2"
+      style="background-color: black"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand d-flex ms-3" href="#"
+          ><img src="img/akatsuki-logo.png" style="width: 4rem" /><span
+            style="font-size: 1.5rem"
+            class="ms-2 mt-1 text-white"
+            >Ganime</span
+          ></a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="navbar-nav mx-auto me-lg-5" style="font-size: 1.5rem">
+            <li class="nav-item active ms-lg-5">
+              <a class="nav-link" href="#"
+                >OVERVIEW <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">READ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">WATCH</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">COMMUNITY</a>
+            </li>
+          </ul>
+          <form class="ms-auto d-flex my-2 my-lg-0 align-items-center me-4">
+            <input
+              class="form-control mr-sm-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn">
+              <i class="fas fa-search text-white fa-xl ms-3 mt-1"></i>
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <img src="img/header-img.jpg" class="w-100 d-block" alt="" />
+
+    <div class="d-md-flex flex-column align-items-center me-5 mt-4 ms-3">
+      <div>
+        <div class="mb-5 ms-3">
+          <a href="#"
+            ><button type="button" class="btn btn-sm btn-warning fw-bold">
+              SHONEN JUMP
+            </button></a
+          >
+          <a href="#" class="links me-sm-2 ms-md-4">Action-Adventure</a>
+          <a href="#" class="links me-sm-2">Comedy</a>
+          <a href="#" class="links me-sm-2">Fantasy</a>
+        </div>
+        <div class="ms-3">
+          <h1 class="display-2 fw-bold">NARUTO</h1>
+          <h3 class="fw-bold mt-3">
+            The epic adventures of the world's greatest ninja!
+          </h3>
+          <div>
+            <h5 class="mt-5">Created by Masashi Kishimoto</h5>
+            <div class="d-lg-flex mt-2 mb-5">
+              <button type="button" class="btn btn-dark btn-lg me-3 mt-3">
+                <i class="fa-solid fa-cart-shopping"></i>
+                Buy Now!
+              </button>
+              <button type="button" class="btn btn-dark btn-lg mt-3">
+                <i class="fa-solid fa-heart"></i>
+                Favorite
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="ms-3 text-center mt-5">
+      <h1 class="display-4 fw-bold">Main Characters</h1>
+    </div>
+    <div class="d-flex justify-content-center card-container">
+      <!--------------------NARUTO---------------------------------------->
+      <div class="card">
+        <div
+          id="naruto"
+          class="carousel carousel-dark slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#naruto"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#naruto"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#naruto"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/naruto/kid.png" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="img/naruto/teen.png" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="img/naruto/pre-war.png"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#naruto"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#naruto"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Naruto</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui
+            inventore quas, eos nam praesentium, asperiores iusto ab provident
+            distinctio cupiditate velit. Sed officiis tempore doloremque
+            voluptate consequatur saepe sunt dicta!
+          </p>
+        </div>
+      </div>
+
+      <!--------------------------------- SASUKE -------------------------------------->
+      <div class="card">
+        <div
+          id="sasuke"
+          class="carousel carousel-dark slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#sasuke"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#sasuke"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#sasuke"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/sasuke/kid.png" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="img/sasuke/teen.webp" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="img/sasuke/3.webp" class="d-block w-100" alt="..." />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#sasuke"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#sasuke"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Sasuke</h5>
+          <p class="card-text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi
+            corporis labore repudiandae impedit fugiat, inventore quas
+            voluptates nisi explicabo non tempora, earum sit soluta nostrum
+            libero temporibus eligendi dicta doloribus.
+          </p>
+        </div>
+      </div>
+      <!----------------------------------SAKURA------------------------------------------------->
+      <div class="card">
+        <div
+          id="carouselExampleIndicators"
+          class="carousel carousel-dark slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/sakura/kid.webp" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="img/sakura/teen.png" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="img/sakura/3.png" class="d-block w-100" alt="..." />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Sakura</h5>
+          <p class="card-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum
+            quisquam veritatis voluptas iure rem repellat incidunt reiciendis
+            natus cumque placeat.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--end of card container-->
+
+    <section class="bg-dark text-white pt-5 pb-5">
+      <div class="me-md-5">
+        <h1 class="text-center me-md-5 mb-5">Read Naruto manga and books</h1>
+      </div>
+      <div class="d-md-flex justify-content-center mt-4 shikamaru">
+        <div class="position-relative">
+          <i class="fa-solid fa-heart position-absolute heart fa-xl"></i>
+          <img src="img/content.jpg" alt="" class="p-sm-5 bg-white" />
+          <span class="h6 position-absolute plus">+120</span>
+        </div>
+        <div class="ms-md-5 mx-4 mt-3 col-md-5">
+          <h1>Naruto: Shikamaru’s Story--Mourning Clouds</h1>
+          <p class="h4">
+            A rupture in the alliance at the Summit of the Five Kages could be
+            the trigger for the Fifth Great Ninja War! Meanwhile, something is
+            causing Shikamaru and his family to drift further and further apart.
+            But Shikamaru has a very powerful card up his sleeve to bring peace
+            to both the world and his family!
+          </p>
+          <div class="mt-5">
+            <button type="button" class="btn btn-success btn-lg mt-5">
+              <i class="fa-solid fa-eye"></i>
+              Free preview
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger btn-lg mt-5 ms-3"
+              data-bs-toggle="modal"
+              data-bs-target="#exampleModal"
+            >
+              Buy now
+            </button>
+            <!--MODAL-->
+            <div
+              class="modal fade text-dark"
+              id="exampleModal"
+              tabindex="-1"
+              aria-labelledby="exampleModalLabel"
+              aria-hidden="true"
+            >
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">
+                      Buying an item?
+                    </h5>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">
+                    By clicking "Buy Now!" you consent to being robbed by naruto
+                    fans.
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">
+                      Buy Now!
+                    </button>
+                    <button
+                      type="button"
+                      class="btn btn-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
+  <script src="js/bootstrap.bundle.js"></script>
 </html>
